--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Exo Solaria Union</title>
+    <title>Nova Ash Artistry</title>
   </head>
 
   <body>
